Removed return with bookings
