# bookings/models/dtos/booking_complete_DTO.go
@@ -3,7 +3,7 @@ package dtos
 import "time"
 
 type BookingCompleteDTO struct {
-	Id   int
+	BookingId   int
 	Name string
 	Date time.Time
 	ClassId int
