# classes/models/dtos/class_schedule_with_bookings_DTO.go
@@ -1,15 +1,0 @@
-package dtos
-
-import (
-	"gym-management/bookings/models/dtos"
-	"time"
-)
-
-type ClassScheduleWithBookingsDTO struct {
-	Id        int
-	Name      string
-	StartDate time.Time
-	EndDate   time.Time
-	Capacity  int
-	Bookings []dtos.BookingCompleteDTO
-}
